# Amali-Projects

Module_1/Lab 1/course_management/: course.py  enrollment.py  main.py  requirements.txt  student.py
Module_1/Lab 2/Vehicle_Rental_System/: .gitignore  README.md  Vehicle.py  main.py  rental_system.py
Module_1/Lab 2/Vehicle_Rental_System/vehicles/: __init__.py  bike.py  car.py  truck.py  vehicle.py
Module_1/Lab 3/library_inventory/: .gitignore  README.md  author.py  book.py  borrower.py  library.py  main.py  requirements.txt  utils.py
Module_2_Cleancode/PDD_API_stub/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
Module_2_Cleancode/PDD_API_stub/src/weather/: __init__.py  exceptions.py  logging_config.py  models.py  provider.py  service.py
Module_2_Cleancode/PDD_API_stub/tests/: conftest.py  test_logging.py  test_service.py
Module_2_Cleancode/resilient-importer/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
Module_2_Cleancode/resilient-importer/PDD_API_stub/: pyproject.toml  requirements.txt
Module_2_Cleancode/resilient-importer/PDD_API_stub/src/weather_stub/: __init__.py  exceptions.py  models.py  service.py
Module_2_Cleancode/resilient-importer/PDD_API_stub/tests/: __init__.py  conftest.py  test_service.py
Module_2_Cleancode/resilient-importer/src/resilient_importer/: __init__.py  cli.py  exceptions.py  importer.py  models.py  parser.py  repository.py  validator.py
Module_2_Cleancode/resilient-importer/tests/: conftest.py  factories.py  test_cli.py  test_components.py  test_importer.py  test_repository.py
Vehicle_Rental_System/: main.py
Vehicle_Rental_System/vehicles/: bike.py
course_management/: enrollment.py  main.py  student.py  test_system.py
(+2 files in other folders)
