[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "resilient-importer"
version = "0.1.0"
description = "A CLI tool that reliably imports user data from CSV into a simulated database."
requires-python = ">=3.11"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["src/resilient_importer"]

[tool.coverage.report]
fail_under = 90
